# swo-adobe-vipm-extension

./: .coderabbit.yaml  .dockerignore  .editorconfig  .env.dev  .env.local  .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  adobe_credentials.json  azure-pipelines.yml  compose.dev.yaml  compose.fastapi.yaml  compose.local.yaml  compose.test.yaml  compose.yaml  dangerfile.js  dev.Dockerfile  docker-compose.yml  email.html  makefile  meta.yaml  processing_test.py  prod.Dockerfile  pyproject.toml  setup.cfg  sonar-project.properties
.danger/: package-lock.json  package.json
.github/: CODEOWNERS  CODEOWNERS.CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/workflows/: copilot-instructions.md  danger.yml  pr-build-merge.yml  pr-build.yml  release.yml
adobe_vipm/: README.md  adobe.py  adobe_config.json  app.py  apps.py  config.py  extension.py  main.py  models.py  notifications.py  region_country_mapping.json  settings.py  shared.py  utils.py
adobe_vipm/adobe/: client.py  config.py  constants.py  dataclasses.py  errors.py  models.py  utils.py  validation.py
adobe_vipm/adobe/mixins/: customer.py  deployment.py  errors.py  order.py  pricing.py  reseller.py  subscription.py  transfer.py
adobe_vipm/airtable/: config.py  constants.py  models.py
adobe_vipm/api/v2/: orders.py
adobe_vipm/flows/: airtable.py  benefits.py  constants.py  context.py  dataclasses.py  errors.py  fulfillment.py  global_customer.py  helpers.py  migration.py  mpt.py  nav.py  pipeline.py  shared.py  sync.py  utils.py  validation.py
adobe_vipm/flows/fulfillment/: __init__.py  base.py  change.py  configuration.py  purchase.py  reseller_transfer.py  shared.py  switch.py  (+2 more)
adobe_vipm/migrations/: parameters_sync.py
adobe_vipm/mrok/: README.md  bootstrap.py  clients.py  config.py  logging.py
adobe_vipm/templates/: email.html  failed.html  notification.html  notification_3yc_expired.html  notification_3yc_expiring.html
danger/: package-lock.json
devmock/: app.py  endpoints.py  exceptions.py  filters.py  mockgendata.py  models.py  settings.py  utils.py
docs/: ADR-001-introduce-sdk-v6.md  TDR-001-requirements.md  TDR-002-sdk-v6-architecture-and-runtime-model.md  architecture.md  contributing.md  deployment.md  documentation.md  examples.http  external-integrations.md  local-development.md  migrations.md  testing.md  user_guides.md
helm/swo-extension-adobe/: Chart.yaml  values.yaml
make/: common.mk  external_tools.mk  migrations.mk  repo.mk
migrations/: 20260209155249_remove_reseller_transfer_fake_items.py  20260225094758_remove_reseller_transfer_fake_items_in_agreements.py  20260225160347_parameters_sync.py  20260227115502_linked_memberships.py  20260306113000_add_adobe_order_ids_ordering_parameter.py  20260421152731_late_renewals_info.py  20260428100014_correct_parameters_3yc_not_updated.py
mpt_extension_sdk/: README.md  pyproject.toml
mpt_extension_sdk/mpt_extension_sdk/: __init__.py  extension_app.py  extension_validator.py
mpt_extension_sdk_v6/: README.md  pyproject.toml
mpt_extension_sdk_v6/mpt_extension_sdk_v6/: __init__.py  extension_app.py  extension_validator.py
mpt_extension_sdk_v6/mpt_extension_sdk_v6/api/: router.py
mpt_extension_sdk_v6/mpt_extension_sdk_v6/api/models/: base.py  events.py
mpt_extension_sdk_v6/mpt_extension_sdk_v6/api/schemas/: base.py  events.py
mpt_extension_sdk_v6/mpt_extension_sdk_v6/cli/: main.py
mpt_extension_sdk_v6/mpt_extension_sdk_v6/errors/: mapping.py  runtime.py  step.py
mpt_extension_sdk_v6/mpt_extension_sdk_v6/models/: __init__.py  account.py  address.py  agreement.py  asset.py  audit.py  authorization.py  base.py  contact.py  external_id.py  licensee.py  order.py  parameter.py  price.py  product.py  subscription.py  template.py
mpt_extension_sdk_v6/mpt_extension_sdk_v6/observability/: bootstrap.py  config.py  decorators.py  tracing.py
mpt_extension_sdk_v6/mpt_extension_sdk_v6/pipeline/: __init__.py  base.py  context.py  decorators.py  factory.py  step.py
mpt_extension_sdk_v6/mpt_extension_sdk_v6/runtime/: app.py  logging.py  main.py  models.py  runner.py
mpt_extension_sdk_v6/mpt_extension_sdk_v6/runtime/bootstrap/: client.py  registration.py
mpt_extension_sdk_v6/mpt_extension_sdk_v6/services/: mpt_api_service.py
mpt_extension_sdk_v6/mpt_extension_sdk_v6/services/api_client_v2/: mpt_api_client.py
mpt_extension_sdk_v6/mpt_extension_sdk_v6/services/api_client_v2/integration/: extensions.py  extensions_installations.py  integration.py
mpt_extension_sdk_v6/mpt_extension_sdk_v6/services/api_client_v2/system/: system.py  system_tasks.py
mpt_extension_sdk_v6/mpt_extension_sdk_v6/services/mpt_api_service/: __init__.py  agreement.py  api_service.py  asset.py  client_factory.py  notification.py  order.py  product.py  subscription.py  task.py  template.py
mpt_extension_sdk_v6/mpt_extension_sdk_v6/settings/: account.py  base.py  extension.py  runtime.py
tests/: conftest.py  test_adobe.py  test_apps.py  test_extension.py  test_notifications.py  test_utils.py
tests/adobe/: conftest.py  test_client.py  test_config.py  test_dataclasses.py  test_errors.py
tests/airtable/: test_models.py
tests/commands/: test_check_gc_agreement_delployment.py  test_check_running_transfers.py  test_create_resellers.py  test_fix_migrated_autorenewal.py  test_migrate_mpt_assets.py  test_process_3yc.py  test_process_transfers.py  test_sync_3yc_enrollments.py  test_sync_agreements.py
tests/core/: test_core_registry.py  test_core_utils.py
tests/django/: settings.py
tests/flows/: conftest.py  test_airtable.py  test_benefits.py  test_errors.py  test_fulfillment.py  test_global_customer.py  test_helpers.py  test_migration.py  test_mpt.py  test_nav.py  test_pipeline.py  test_shared.py  test_sync.py  test_utils.py  test_validation.py
tests/migrations/: test_agreement_client.py  test_migrate_product.py  test_parameters_sync.py
tests/runtime/: test_runtime_initializer.py  test_runtime_logging.py  test_runtime_master.py  test_runtime_utils.py  test_runtime_workers.py  test_workers.py
(+287 files in other folders)
