[tool.poetry]
name = "swo-adobe-vimp-extension"
version = "0.1.0"
description = "Adobe VIP Marketplace extension for SWO Marketplace Platform"
authors = ["SoftwareOne AG"]
license = "Apache-2.0 license"
packages = [
    { include = "adobe_vipm" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4"
django = "4.2.*" # should it be a dependency of the extension ? it is already a dependency of the sdk.
openpyxl = "3.1.*"
phonenumbers = "8.13.*"
pyairtable = "2.3.*"
requests = "2.31.*"

[tool.poetry.group.devmock.dependencies] # Remove when devmock is not needed anymore
faker = "22.2.*"
fastapi = "0.109.*"
lib-rql = "2.0.*"
rich = "13.7.*"
uvicorn = "0.25.*"

[tool.poetry.group.dev.dependencies]
freezegun = "1.4.*"
ipdb = "0.13.*"
ipython = "8.*"
mypy = "1.8.*"
poetry-plugin-sort = "0.2.*"
pre-commit = "3.6.*"
pytest = "7.4.*"
pytest-cov = "4.1.*"
pytest-deadfixtures = "2.2.*"
pytest-django = "4.7.*"
pytest-mock = "3.12.*"
pytest-randomly = "3.15.*"
pytest-xdist = "3.5.*"
responses = "0.24.*"
ruff = "0.3.*"
types-requests = "2.31.*"

[tool.poetry.group.sdk.dependencies] # Move to the SDK when splitting
django-ninja = "1.1.*"
pyjwt = "2.8.*"
typing-extensions = "4.9.*"


[tool.poetry.group.runtime.dependencies] # Move to runtime when splitting
azure-monitor-opentelemetry-exporter = "1.0.0b23"
click = "8.1.*"
debugpy = "1.8.*"
gunicorn = "22.0.*"
opentelemetry-api = "1.22.*"
opentelemetry-instrumentation-django = "^0.43b0"
opentelemetry-instrumentation-logging = "^0.43b0"
opentelemetry-instrumentation-requests = "^0.43b0"
opentelemetry-sdk = "1.22.*"
pyfiglet = "1.0.*"
rich = "13.7.*"
watchfiles = "0.21.*"

[tool.poetry.scripts]
swoext = 'swo.mpt.extensions.runtime.swoext:main' # Move to runtime when splitting
mockgendata = 'devmock.mockgendata:main' # Remove when devmock is not needed anymore
devmock = 'devmock.app:main' # Remove when devmock is not needed anymore


[tool.poetry.plugins."swo.mpt.ext"]
"app_config" = "adobe_vipm.apps:ExtensionConfig"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests"
pythonpath = "."
addopts = "--cov=adobe_vipm --cov-report=term-missing --cov-report=html --cov-report=xml"
DJANGO_SETTINGS_MODULE = "tests.django.settings"
log_cli = false
filterwarnings = [
    "ignore:Support for class-based `config` is deprecated:DeprecationWarning",
    "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
]

[tool.coverage.run]
branch = true

[tool.ruff]
extend-exclude = [".vscode", ".devcontainer", "swo", "devmock"]
output-format = "full"

[tool.ruff.lint]

select = [
    "E",  # w errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade,
    "PT",  # flake8-pytest-style
    "T10",  # flake8-pytest-style
]
ignore = [
    "PT004", # fixture '{name}' does not return anything, add leading underscore
    "PT011", # pytest.raises({exception}) is too broad, set the match parameter or use a more specific exception
    "B008",  # do not perform function calls in argument defaults
    "B904",  # Within an `except` clause, raise exceptions with `raise ... from err` or `raise ... from None` to distinguish them from errors in exception handling
]

[tool.ruff.lint.isort]
known-third-party = ["swo"]

[tool.ruff.lint.pycodestyle]
max-line-length = 100

[tool.mypy]
warn_no_return = false

[[tool.mypy.overrides]]
module = "django.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyfiglet.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "gunicorn.*"
ignore_missing_imports = true
